@@ -47,6 +47,15 @@ override_dh_auto_install:
 	mkdir debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
 	mv debian/tmp/usr/lib/pkgconfig debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
 
+override_dh_install:
+	rm -fr debian/tmp/usr/lib/python*/dist-packages/__pycache__
+	rm -fr debian/tmp/usr/lib/python*/dist-packages/*/__pycache__
+	rm -fr debian/tmp/usr/lib/python*/dist-packages/*/*/__pycache__
+	rm -f debian/tmp/usr/lib/python*/dist-packages/*.pyc
+	rm -f debian/tmp/usr/lib/python*/dist-packages/*/*.pyc
+	rm -f debian/tmp/usr/lib/python*/dist-packages/*/*/*.pyc
+	dh_install
+
 override_dh_strip-arch:
 	dh_strip -ppython-gi --dbg-package=python-gi-dbg
 	dh_strip -ppython-gi-cairo --dbg-package=python-gi-dbg
