@@ -6,6 +6,7 @@ pygobject (3.34.0-2) UNRELEASED; urgency=medium
   * d/tests/python2*: Use python2, not python.
     Thanks to Matthias Klose. (Closes: #943428)
   * d/rules: Fail the build if any files are built but not installed
+  * d/rules: Delete *.pyc files before running dh_missing
 
  -- Simon McVittie <smcv@debian.org>  Fri, 15 Nov 2019 19:21:20 +0000
 
